# CRM3007L.FW

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  I2C.md  IMPLEMENTATION_SUMMARY.md  OB38R16T1_ISP_Protocol_Analysis.md  README.md  REVIEW_SUMMARY.md
.github/: copilot-instructions.md
Keil/: .gitignore  CRM3007L.uvopt  CRM3007L.uvproj  OB38R16T1.h  STARTUP.A51  board.c  board.h  main.c  sensors.c  sensors.h
Keil/HAL/: ADC.c  IIC.c  PWM.c  PWM.h  UART.c  WDT.c  WDT.h
cmake/: sdcc-toolchain.cmake
include/: OB38R16T1.h  config.h
src/: board.c  board.h  main.c  pid.c  pid.h  sensors.c  sensors.h  version.h
src/HAL/: ADC.c  ADC.h  IIC.c  IIC.h  PWM.c  PWM.h  UART.c  UART.h  WDT.c  timer.c  timer.h
